--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
 	"description": "",
 	"dependencies": {
 		"apollo-server": "^3.6.1",
+		"bcrypt": "^5.0.1",
+		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
 		"express": "^4.17.2",
 		"express-graphql": "^0.12.0",
 		"graphql": "^16.2.0",
+		"jsonwebtoken": "^8.5.1",
 		"mysql2": "^2.3.3",
 		"nodemon": "^2.0.15",
 		"sequelize": "^6.13.0",
